Fix for missing filter button on iphone

--- a/front-gateway/src/components/Search/style/filter.scss
+++ b/front-gateway/src/components/Search/style/filter.scss
@@ -120,6 +120,19 @@
   font-size: 13px;
   line-height: $line-height-computed;
   padding: 24px 46px 0;
+
+  * {
+    -o-transition-property: none !important;
+    -moz-transition-property: none !important;
+    -ms-transition-property: none !important;
+    -webkit-transition-property: none !important;
+    transition-property: none !important;
+    -webkit-animation: none !important;
+    -moz-animation: none !important;
+    -o-animation: none !important;
+    -ms-animation: none !important;
+    animation: none !important;
+  }
 }
 
 .filter-amenities-container {
@@ -257,7 +270,7 @@
 
 .noUi-origin.noUi-background {
   background-color: $brand-white;
-  box-shadow: inset 0 1px 1px #F0F0F0, 0 3px 6px -5px #BBB;
+  box-shadow: inset 0 1px 1px #f0f0f0, 0 3px 6px -5px #bbb;
   height: 4px;
   right: 0;
   width: auto;
@@ -278,26 +291,5 @@
   > div {
     height: 4px;
     margin-bottom: 80px;
-  }
-
-  * {
-    /*CSS transitions*/
-    -o-transition-property: none !important;
-    -moz-transition-property: none !important;
-    -ms-transition-property: none !important;
-    -webkit-transition-property: none !important;
-    transition-property: none !important;
-    /*CSS transforms*/
-    -o-transform: none !important;
-    -moz-transform: none !important;
-    -ms-transform: none !important;
-    -webkit-transform: none !important;
-    transform: none !important;
-    /*CSS animations*/
-    -webkit-animation: none !important;
-    -moz-animation: none !important;
-    -o-animation: none !important;
-    -ms-animation: none !important;
-    animation: none !important;
   }
 }
